Labs/02 Traffic Management/04 canary/03_productpage-canary-with-cookie.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
    - bookinfo.local
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - headers:
            cookie: 
              regex: "^(.*?;)?(product-page=v2)(;.*)?$"
      route:
        - destination:
            host: productpage
            subset: v2
            port:
              number: 9080
    - route:
        - destination:
            host: productpage
            subset: v1
            port:
              number: 9080
          weight: 70
        - destination:
            host: productpage
            subset: v2
            port:
              number: 9080
          weight: 30
